Tidied up code base

--- a/mini-project.ipynb
+++ b/mini-project.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "1fe7276a",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "daf6d039",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
     "from grid_universe.state import State\n",
     "\n",
     "\n",
-    "def evaluate(agent_class: type[Agent], env: GridUniverseEnv, isDebug = False) -> tuple[float, bool, bool, list[tuple[State,Action]]]:\n",
+    "def evaluate(agent_class: type[Agent], env: GridUniverseEnv) -> tuple[float, bool, bool, list[tuple[State,Action]]]:\n",
     "    \"\"\"Utility to execute a full episode using the provided agent class.\n",
     "\n",
     "    Parameters\n",
@@ -391,7 +391,7 @@
     "    - This helper mirrors the Coursemology evaluation loop structure.\n",
     "    \"\"\"\n",
     "    state, _ = env.reset()\n",
-    "    agent = agent_class(isDebug = isDebug)\n",
+    "    agent = agent_class()\n",
     "    win = False\n",
     "    lose = False\n",
     "    total_reward = 0\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "810c8ea8",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,6 @@
     "        time_limit: int | None = None,\n",
     "        turn_limit: int | None = None,\n",
     "        seed: int = 42,\n",
-    "        isDebug = False,\n",
     "        **kwargs,\n",
     "    ) -> dict[str, float | str | bool]:\n",
     "    level_name = get_level_name(builder)\n",
@@ -518,7 +517,7 @@
     "    runtime = time_limit\n",
     "    try:\n",
     "        start_time = time.time()\n",
-    "        total_reward, win, lose, _ = evaluate(agent_class, env, isDebug=isDebug)\n",
+    "        total_reward, win, lose, _ = evaluate(agent_class, env)\n",
     "        runtime = time.time() - start_time\n",
     "    except Exception as e:\n",
     "        print(f\"Error during evaluation of {level_name}: {e}\")\n",
