Not quite working image generator
Pivoting to a more basic strat

--- a/mini-project.ipynb
+++ b/mini-project.ipynb
@@ -520,6 +520,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec2ab7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run image_generator.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "21660682",
    "metadata": {},
@@ -541,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4c67e8ee",
    "metadata": {},
    "outputs": [
@@ -558,7 +568,7 @@
       "Actions to win:  10\n",
       "MST Cache hits: 75 (98.684211%)\n",
       "Cache: {frozenset({(7, 5)}): 0}\n",
-      "level_name: Level maze turns (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.13\n",
+      "level_name: Level maze turns (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.17\n",
       "Portal pairs:  0\n",
       "Collectibles:  6\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -578,7 +588,7 @@
       "Actions to win:  9\n",
       "MST Cache hits: 77 (97.468354%)\n",
       "Cache: {frozenset({(3, 2), (7, 3)}): 5, frozenset({(7, 3)}): 0}\n",
-      "level_name: Level required one (level), performance: 1.0, total_reward: -24.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 6.9\n",
+      "level_name: Level required one (level), performance: 1.0, total_reward: -24.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 6.11\n",
       "Portal pairs:  0\n",
       "Collectibles:  2\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -588,7 +598,7 @@
       "Actions to win:  22\n",
       "MST Cache hits: 266 (98.518519%)\n",
       "Cache: {frozenset({(5, 1), (5, 7), (9, 4)}): 13, frozenset({(5, 7), (9, 4)}): 7, frozenset({(5, 1), (9, 4)}): 7, frozenset({(9, 4)}): 0}\n",
-      "level_name: Level required two (level), performance: 1.0, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 1.17\n",
+      "level_name: Level required two (level), performance: 1.0, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 1.0\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  OnlyKey\n",
@@ -598,7 +608,7 @@
       "Actions to win:  12\n",
       "MST Cache hits: 184 (98.924731%)\n",
       "Cache: {frozenset({(2, 3), (9, 4)}): 8, frozenset({(9, 4)}): 0}\n",
-      "level_name: Level key door (level), performance: 1.0, total_reward: -33.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.47\n",
+      "level_name: Level key door (level), performance: 1.0, total_reward: -33.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.38\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -608,7 +618,7 @@
       "Actions to win:  8\n",
       "MST Cache hits: 37 (97.368421%)\n",
       "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level hazard detour (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.12\n",
+      "level_name: Level hazard detour (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
       "Portal pairs:  1\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -618,7 +628,7 @@
       "Actions to win:  5\n",
       "MST Cache hits: 37 (97.368421%)\n",
       "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level portal shortcut (level), performance: 1.0, total_reward: -12.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.11\n",
+      "level_name: Level portal shortcut (level), performance: 1.0, total_reward: -12.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -628,7 +638,7 @@
       "Actions to win:  8\n",
       "MST Cache hits: 37 (97.368421%)\n",
       "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level pushable box (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.12\n",
+      "level_name: Level pushable box (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -638,7 +648,7 @@
       "Actions to win:  10\n",
       "MST Cache hits: 56 (98.245614%)\n",
       "Cache: {frozenset({(11, 4)}): 0}\n",
-      "level_name: Level enemy patrol (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.25\n",
+      "level_name: Level enemy patrol (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.2\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -648,7 +658,7 @@
       "Actions to win:  15\n",
       "MST Cache hits: 757 (99.868074%)\n",
       "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level power shield (level), performance: 1.0, total_reward: -42.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 1.8\n",
+      "level_name: Level power shield (level), performance: 1.0, total_reward: -42.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.3\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  OnlyPhasing\n",
@@ -658,7 +668,7 @@
       "Actions to win:  17\n",
       "MST Cache hits: 249 (99.203187%)\n",
       "Cache: {frozenset({(2, 1), (11, 4)}): 12, frozenset({(11, 4)}): 0}\n",
-      "level_name: Level power ghost (level), performance: 1.0, total_reward: -48.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.85\n",
+      "level_name: Level power ghost (level), performance: 1.0, total_reward: -48.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.96\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -668,7 +678,7 @@
       "Actions to win:  10\n",
       "MST Cache hits: 374 (99.733333%)\n",
       "Cache: {frozenset({(11, 4)}): 0}\n",
-      "level_name: Level power boots (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 1.62\n",
+      "level_name: Level power boots (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.48\n",
       "Portal pairs:  0\n",
       "Collectibles:  2\n",
       "Requirement for Speed, Key, Ghost:  OnlyKey\n",
@@ -678,7 +688,7 @@
       "Actions to win:  22\n",
       "MST Cache hits: 1156 (99.827288%)\n",
       "Cache: {frozenset({(6, 6), (0, 4)}): 8, frozenset({(6, 6)}): 0}\n",
-      "level_name: Level capstone (level), performance: 0.58, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 3.98\n"
+      "level_name: Level capstone (level), performance: 0.58, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 3.06\n"
      ]
     }
    ],
