Fix merge issues

--- a/mini-project.ipynb
+++ b/mini-project.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a246b570",
    "metadata": {},
    "outputs": [],
@@ -556,19 +556,21 @@
       "Completion summary: \n",
       "Total nodes expanded: 27\n",
       "Actions to win:  10\n",
-      "MST Cache hits: 75 (98.684211%)\n",
-      "Cache: {frozenset({(7, 5)}): 0}\n",
-      "level_name: Level maze turns (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.17\n",
+      "MST Cache hits: 75 (98.684211%), Size: 1\n",
+      "Manhattan Calls:  76\n",
+      "Error during evaluation of Level maze turns: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level maze turns (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  6\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
       "Has Coins:  True\n",
       "Completion summary: \n",
-      "Total nodes expanded: 13\n",
-      "Actions to win:  10\n",
-      "MST Cache hits: 36 (97.297297%)\n",
-      "Cache: {frozenset({(7, 5)}): 0}\n",
-      "level_name: Level optional coin (level), performance: 0.9534883720930233, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.09\n",
+      "Total nodes expanded: 81\n",
+      "Actions to win:  18\n",
+      "MST Cache hits: 151 (99.342105%), Size: 1\n",
+      "Manhattan Calls:  152\n",
+      "Error during evaluation of Level optional coin: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level optional coin (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -576,9 +578,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 27\n",
       "Actions to win:  9\n",
-      "MST Cache hits: 77 (97.468354%)\n",
-      "Cache: {frozenset({(3, 2), (7, 3)}): 5, frozenset({(7, 3)}): 0}\n",
-      "level_name: Level required one (level), performance: 1.0, total_reward: -24.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 6.11\n",
+      "MST Cache hits: 77 (97.468354%), Size: 2\n",
+      "Manhattan Calls:  135\n",
+      "Error during evaluation of Level required one: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level required one (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  2\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -586,9 +589,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 140\n",
       "Actions to win:  22\n",
-      "MST Cache hits: 266 (98.518519%)\n",
-      "Cache: {frozenset({(5, 1), (5, 7), (9, 4)}): 13, frozenset({(5, 7), (9, 4)}): 7, frozenset({(5, 1), (9, 4)}): 7, frozenset({(9, 4)}): 0}\n",
-      "level_name: Level required two (level), performance: 1.0, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 1.0\n",
+      "MST Cache hits: 266 (98.518519%), Size: 4\n",
+      "Manhattan Calls:  632\n",
+      "Error during evaluation of Level required two: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level required two (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  OnlyKey\n",
@@ -596,9 +600,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 74\n",
       "Actions to win:  12\n",
-      "MST Cache hits: 184 (98.924731%)\n",
-      "Cache: {frozenset({(2, 3), (9, 4)}): 8, frozenset({(9, 4)}): 0}\n",
-      "level_name: Level key door (level), performance: 1.0, total_reward: -33.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.38\n",
+      "MST Cache hits: 184 (98.924731%), Size: 2\n",
+      "Manhattan Calls:  286\n",
+      "Error during evaluation of Level key door: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level key door (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -606,9 +611,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 9\n",
       "Actions to win:  8\n",
-      "MST Cache hits: 37 (97.368421%)\n",
-      "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level hazard detour (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
+      "MST Cache hits: 37 (97.368421%), Size: 1\n",
+      "Manhattan Calls:  38\n",
+      "Error during evaluation of Level hazard detour: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level hazard detour (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  1\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -616,9 +622,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 11\n",
       "Actions to win:  5\n",
-      "MST Cache hits: 37 (97.368421%)\n",
-      "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level portal shortcut (level), performance: 1.0, total_reward: -12.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
+      "MST Cache hits: 37 (97.368421%), Size: 1\n",
+      "Manhattan Calls:  190\n",
+      "Error during evaluation of Level portal shortcut: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level portal shortcut (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -626,9 +633,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 9\n",
       "Actions to win:  8\n",
-      "MST Cache hits: 37 (97.368421%)\n",
-      "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level pushable box (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.1\n",
+      "MST Cache hits: 37 (97.368421%), Size: 1\n",
+      "Manhattan Calls:  38\n",
+      "Error during evaluation of Level pushable box: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level pushable box (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  0\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -636,9 +644,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 17\n",
       "Actions to win:  10\n",
-      "MST Cache hits: 56 (98.245614%)\n",
-      "Cache: {frozenset({(11, 4)}): 0}\n",
-      "level_name: Level enemy patrol (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.2\n",
+      "MST Cache hits: 56 (98.245614%), Size: 1\n",
+      "Manhattan Calls:  57\n",
+      "Error during evaluation of Level enemy patrol: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level enemy patrol (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -646,9 +655,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 539\n",
       "Actions to win:  15\n",
-      "MST Cache hits: 757 (99.868074%)\n",
-      "Cache: {frozenset({(9, 4)}): 0}\n",
-      "level_name: Level power shield (level), performance: 1.0, total_reward: -42.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.3\n",
+      "MST Cache hits: 757 (99.868074%), Size: 1\n",
+      "Manhattan Calls:  758\n",
+      "Error during evaluation of Level power shield: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level power shield (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  OnlyPhasing\n",
@@ -656,9 +666,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 83\n",
       "Actions to win:  17\n",
-      "MST Cache hits: 249 (99.203187%)\n",
-      "Cache: {frozenset({(2, 1), (11, 4)}): 12, frozenset({(11, 4)}): 0}\n",
-      "level_name: Level power ghost (level), performance: 1.0, total_reward: -48.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 0.96\n",
+      "MST Cache hits: 249 (99.203187%), Size: 2\n",
+      "Manhattan Calls:  342\n",
+      "Error during evaluation of Level power ghost: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level power ghost (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  1\n",
       "Requirement for Speed, Key, Ghost:  Nothing\n",
@@ -666,9 +677,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 215\n",
       "Actions to win:  10\n",
-      "MST Cache hits: 374 (99.733333%)\n",
-      "Cache: {frozenset({(11, 4)}): 0}\n",
-      "level_name: Level power boots (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.48\n",
+      "MST Cache hits: 374 (99.733333%), Size: 1\n",
+      "Manhattan Calls:  375\n",
+      "Error during evaluation of Level power boots: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level power boots (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n",
       "Portal pairs:  0\n",
       "Collectibles:  2\n",
       "Requirement for Speed, Key, Ghost:  OnlyKey\n",
@@ -676,9 +688,10 @@
       "Completion summary: \n",
       "Total nodes expanded: 759\n",
       "Actions to win:  22\n",
-      "MST Cache hits: 1156 (99.827288%)\n",
-      "Cache: {frozenset({(6, 6), (0, 4)}): 8, frozenset({(6, 6)}): 0}\n",
-      "level_name: Level capstone (level), performance: 0.58, total_reward: -63.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 3.06\n"
+      "MST Cache hits: 1156 (99.827288%), Size: 2\n",
+      "Manhattan Calls:  2124\n",
+      "Error during evaluation of Level capstone: 'Agent' object has no attribute 'add_point_to_mst'\n",
+      "level_name: Level capstone (level), performance: 0.0, total_reward: 0.0, win: False, lose: False, timeout: True, error: True, runtime (sec): 25\n"
      ]
     }
    ],
@@ -717,7 +730,26 @@
    "execution_count": null,
    "id": "2691b7a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\eugen\\Downloads\\mini-project\\CS2109S-Mini-project\\venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Portal pairs:  0\n",
+      "Collectibles:  2\n",
+      "Requirement for Speed, Key, Ghost:  Nothing\n",
+      "Has Coins:  False\n"
+     ]
+    }
+   ],
    "source": [
     "result = evaluate_level(Agent, build_level_required_two, observation_type='level', \n",
     "    max_total_reward=-63, \n",
